改了改样式

--- a/main.xhtml
+++ b/main.xhtml
@@ -4,6 +4,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <title></title>
 </head>
 <body>
@@ -36,31 +37,38 @@
     </div>
 </div>
 <hr/>
-<div>
-    <p>
-        Here are the links to his homework for <i><strong>Introduction to Web Technology</strong></i>.
-    </p>
-</div>
 <div id="homework">
-    <table>
-        <tr>
-            <th>
-                <a href="http://162.105.146.183/b2evolution/blogs/index.php/peimingyuan896/homework-23"
-                   target="_blank">Homework 1</a>
-            </th>
-        </tr>
-        <tr>
-            <th>
-                <a href="index.xhtml" target="_blank">Homework 2</a>
-            </th>
-        </tr>
-        <tr>
-            <th>
-                <a href="has_no_homework.xhtml" target="_blank">Homework 3</a>
-            </th>
-        </tr>
-    </table>
-    <hr/>
+    <div>
+        <p>
+            Here are the links to his homework for <i><strong>Introduction to Web Technology</strong></i>.
+        </p>
+    </div>
+    <div>
+        <table>
+            <tr>
+                <th>
+                    Homework
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    <a href="http://162.105.146.183/b2evolution/blogs/index.php/peimingyuan896/homework-23"
+                       target="_blank">Homework 1</a>
+                </td>
+            </tr>
+            <tr class="alt">
+                <td>
+                    <a href="index.xhtml" target="_blank">Homework 2</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="has_no_homework.xhtml" target="_blank">Homework 3</a>
+                </td>
+            </tr>
+        </table>
+        <hr/>
+    </div>
 </div>
 </body>
 </html>
