--- a/head.xhtml
+++ b/head.xhtml
@@ -6,7 +6,7 @@
 <head>
     <title></title>
 </head>
-<body>
+<body background="img/1-130420115Z5.png">
     <div>
         <h1 style="text-align: center">The Homepage of Mingyuan Pei</h1>
     </div>
