--- a/bar.xhtml
+++ b/bar.xhtml
@@ -4,6 +4,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <title></title>
 </head>
 <body>
