第2次作业终版

--- a/main.xhtml
+++ b/main.xhtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <title></title>
 </head>
-<body>
+<body style="font-family: Times New Roman,Georgia,Serif;">
 <div>
     <h1>Mingyuan Pei's Homepage</h1>
 
@@ -58,7 +58,7 @@
             </tr>
             <tr class="alt">
                 <td>
-                    <a href="index.xhtml" target="_blank">Homework 2</a>
+                    <a href="homework/homework2.xhtml" target="_blank">Homework 2</a>
                 </td>
             </tr>
             <tr>
