第2次作业终版

--- a/homework/2/table.xhtml
+++ b/homework/2/table.xhtml
@@ -28,7 +28,7 @@
             <td colspan="5">sleep</td>
             <td colspan="2" rowspan="12">sleep</td>
         </tr>
-        <tr>
+        <tr class="alt">
             <td>2</td>
             <td colspan="5">sleep</td>
         </tr>
@@ -36,7 +36,7 @@
             <td>3</td>
             <td colspan="5">sleep</td>
         </tr>
-        <tr>
+        <tr class="alt">
             <td>4</td>
             <td colspan="5">sleep</td>
         </tr>
@@ -44,7 +44,7 @@
             <td>5</td>
             <td colspan="5">sleep</td>
         </tr>
-        <tr>
+        <tr class="alt">
             <td>6</td>
             <td colspan="5">sleep</td>
         </tr>
@@ -52,7 +52,7 @@
             <td>7</td>
             <td colspan="5">sleep</td>
         </tr>
-        <tr>
+        <tr class="alt">
             <td>8</td>
             <td colspan="5">sleep</td>
         </tr>
@@ -60,7 +60,7 @@
             <td>9</td>
             <td colspan="5">sleep</td>
         </tr>
-        <tr>
+        <tr class="alt">
             <td>10</td>
             <td colspan="5">sleep</td>
         </tr>
@@ -68,7 +68,7 @@
             <td>11</td>
             <td colspan="5">sleep</td>
         </tr>
-        <tr>
+        <tr class="alt">
             <td>12</td>
             <td colspan="5">sleep</td>
         </tr>
