通过了XHTML测试

--- a/bar.xhtml
+++ b/bar.xhtml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><!-- <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <title></title>
+    <script type="text/javascript" src="js/external.js"></script>
+    <title>bar</title>
 </head>
 <body>
 <div>
     <ol>
-        <li><a href="main.xhtml#introduction" target="mainframe">Introduction</a></li>
-        <li><a href="main.xhtml#photo" target="mainframe">Photo</a></li>
-        <li><a href="main.xhtml#homework" target="mainframe">Homework</a></li>
+        <li><a href="main.xhtml#introduction" rel="mainframe">Introduction</a></li>
+        <li><a href="main.xhtml#photo" rel="mainframe">Photo</a></li>
+        <li><a href="main.xhtml#homework" rel="mainframe">Homework</a></li>
     </ol>
 </div>
 </body>
