--- a/head.xhtml
+++ b/head.xhtml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><!-- <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title></title>
+    <style type="text/css">
+        body{
+            background-image: url("img/1_130420115Z5.png");
+        }
+    </style>
+    <title>body</title>
 </head>
-<body background="img/1-130420115Z5.png">
-    <div>
-        <h1 style="text-align: center">The Homepage of Mingyuan Pei</h1>
-    </div>
+<body>
+<div>
+    <h1 style="text-align: center">The Homepage of Mingyuan Pei</h1>
+</div>
 </body>
 </html>
