--- a/homework/homework2.xhtml
+++ b/homework/homework2.xhtml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><!-- <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>homework2</title>
+    <script type="text/javascript" src="../js/external.js"></script>
 </head>
 <body>
 <div>
@@ -13,11 +14,11 @@
         I'll show them in the following pages.
     </p>
     <ol>
-       <li><a href="2/hin.xhtml" target="_blank">hypertext links that target within the same page</a></li>
-        <li><a href="2/ol.xhtml" target="_blank">ordered list</a></li>
-        <li><a href="2/table.xhtml" target="_blank">a table with rowspan and colspan attributes</a></li>
-        <li><a href="2/frameset.xhtml" target="_blank">frameset</a></li>
-        <li><a href="2/comment.xhtml" target="_blank">HTML comment</a></li>
+        <li><a href="2/hin.xhtml" rel="external">hypertext links that target within the same page</a></li>
+        <li><a href="2/ol.xhtml" rel="external">ordered list</a></li>
+        <li><a href="2/table.xhtml" rel="external">a table with rowspan and colspan attributes</a></li>
+        <li><a href="2/frameset.xhtml" rel="external">frameset</a></li>
+        <li><a href="2/comment.xhtml" rel="external">HTML comment</a></li>
     </ol>
 </div>
 </body>
