--- a/main.xhtml
+++ b/main.xhtml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><!-- <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <title></title>
+    <script type="text/javascript" src="js/external.js"></script>
+    <title>Main</title>
 </head>
 <body style="font-family: Times New Roman,Georgia,Serif;">
 <div>
@@ -19,9 +20,9 @@
             the
             projects he has
             done are placed at <a href="https://www.github.com/chnpmy/"
-                                  target="_blank">https://www.github.com/chnpmy/</a>.
+                                  rel="external">https://www.github.com/chnpmy/</a>.
             You can contact him via e-mail <a href="mailto:peimingyuan@pku.edu.cn"
-                                              target="_blank">peimingyuan@pku.edu.cn</a>.
+                                              rel="external">peimingyuan@pku.edu.cn</a>.
         </p>
     </div>
     <hr/>
@@ -30,7 +31,7 @@
 
         <p>
             There is his photo. You can click it to visit his blog.<br/><br/>
-            <a href="http://162.105.146.183/b2evolution/blogs/index.php/peimingyuan896/" target="_blank">
+            <a href="http://162.105.146.183/b2evolution/blogs/index.php/peimingyuan896/" rel="external">
                 <img src="img/pmy_min.jpg" alt="photo" height="200" width="150"/>
             </a>
         </p>
@@ -53,17 +54,17 @@
             <tr>
                 <td>
                     <a href="http://162.105.146.183/b2evolution/blogs/index.php/peimingyuan896/homework-23"
-                       target="_blank">Homework 1</a>
+                       rel="external">Homework 1</a>
                 </td>
             </tr>
             <tr class="alt">
                 <td>
-                    <a href="homework/homework2.xhtml" target="_blank">Homework 2</a>
+                    <a href="homework/homework2.xhtml" rel="external">Homework 2</a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="has_no_homework.xhtml" target="_blank">Homework 3</a>
+                    <a href="has_no_homework.xhtml" rel="external">Homework 3</a>
                 </td>
             </tr>
         </table>
