--- a/main.xhtml
+++ b/main.xhtml
@@ -64,7 +64,7 @@
             </tr>
             <tr>
                 <td>
-                    <a href="has_no_homework.xhtml" rel="external">Homework 3</a>
+                    <a href="homework/homework3.xhtml" rel="external">Homework 3</a>
                 </td>
             </tr>
         </table>
