--- a/main.xhtml
+++ b/main.xhtml
@@ -67,6 +67,11 @@
                     <a href="homework/homework3.xhtml" rel="external">Homework 3</a>
                 </td>
             </tr>
+            <tr class="alt">
+                <td>
+                    <a href="homework/homework4.xhtml" rel="external">Homework 4</a>
+                </td>
+            </tr>
         </table>
         <hr/>
     </div>
