--- a/homework/4/hello.xhtml
+++ b/homework/4/hello.xhtml
@@ -4,9 +4,11 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>Homework 4</title>
+    <title>Hello, php!</title>
 </head>
 <body>
-
+<?php
+        echo "Hello, php";
+        ?>
 </body>
 </html>
