--- a/main.xhtml
+++ b/main.xhtml
@@ -69,7 +69,17 @@
             </tr>
             <tr class="alt">
                 <td>
-                    <a href="homework/homework4.xhtml" rel="external">Homework 4</a>
+                    <a href="homework/homework4.html" rel="external">Homework 4</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="homework/homework5.html" rel="external">Homework 3</a>
+                </td>
+            </tr>
+            <tr class="alt">
+                <td>
+                    <a href="homework/homework6.html" rel="external">Homework 4</a>
                 </td>
             </tr>
         </table>
