--- a/homework/homework6.html
+++ b/homework/homework6.html
@@ -3,8 +3,16 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link href="../css/style.css" type="text/css"/>
 </head>
 <body>
-
+    <ol>
+        <li><a href="6/0.html">homework 0</a></li>
+        <li><a href="6/hiThere.html">homework 1</a></li>
+        <li><a href="6/function.html">homework 2</a></li>
+        <li><a href="6/popups.html">homework 3</a></li>
+        <li><a href="6/objects.html">homework 4</a></li>
+        <li><a href="6/wizardForm.html">homework 5</a></li>
+    </ol>
 </body>
 </html>
