--- a/main.xhtml
+++ b/main.xhtml
@@ -87,6 +87,11 @@
                     <a href="homework/homework7.html" rel="external">Homework 7</a>
                 </td>
             </tr>
+            <tr class="alt">
+                <td>
+                    <a href="homework/homework9.html" rel="external">Homework 9</a>
+                </td>
+            </tr>
         </table>
         <hr/>
     </div>
